Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "test:watch": "jest --watch",
+    "cdk": "cdk",
+    "bootstrap": "cdk bootstrap",
+    "deploy": "cdk deploy --all",
+    "destroy": "cdk destroy --all",
+    "diff": "cdk diff",
+    "synth": "cdk synth",
+    "list": "cdk list"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -25,6 +32,7 @@
     "aws-cdk-lib": "2.143.1",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.5",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "zod": "3.25.76"
   }
 }
