Add RDS and EC2 constructs with configuration options and unit tests

--- a/.env.template
+++ b/.env.template
@@ -21,3 +21,15 @@ VPC_MAX_AZS=2
 
 # Optional: Number of NAT Gateways (default: 0, set to 1+ for private subnet internet access)
 VPC_NAT_GATEWAYS=0
+
+# RDS Configuration
+RDS_INSTANCE_TYPE=t3.micro
+RDS_MULTI_AZ=false
+RDS_STORAGE=20
+RDS_DB_NAME=cdkapp
+RDS_USERNAME=postgres
+
+# EC2 Configuration
+EC2_INSTANCE_TYPE=t3.micro
+# Optional: EC2 Key Pair name for SSH access (if not provided, SSM access only)
+EC2_KEY_NAME=
